--- a/package.json
+++ b/package.json
@@ -21,15 +21,29 @@
   },
   "transform": {},
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
     "eslint-plugin-jest": "^27.2.1",
+    "formik": "^2.2.9",
+    "lottie-ios": "3.5.0",
+    "lottie-react-native": "^6.0.0-rc.3",
     "react": "18.2.0",
     "react-native": "0.71.4",
-    "react-native-dotenv": "^3.4.8"
+    "react-native-dotenv": "^3.4.8",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.8.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
+    "@babel/runtime": "^7.21.0",
     "@commitlint/cli": "^17.5.0",
     "@commitlint/config-conventional": "^17.4.4",
     "@react-native-community/eslint-config": "^3.2.0",
